# synapse

./: .gitignore  CHANGELOG.md  CLI_VERSION.md  COMPLETE_FEATURES.md  Cargo.toml  FEATURES.md  FUTURE_IMPROVEMENTS.md  README.md
src/: accessibility.rs  actions.rs  agent.rs  ai_cli.rs  app.rs  changelog.rs  code_editor.rs  grid.rs  guides.rs  lens.rs  logs.rs  main.rs  report.rs  roster.rs  scripting.rs  settings.rs  settings_ui.rs  status_bar.rs  terminal.rs  themes.rs
