[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet T. AKALIN <makalin@dv.com.tr>"]
description = "The Runtime-First AI Orchestration Console"
license = "MIT"
repository = "https://github.com/makalin/synapse"

[dependencies]
gpui = "0.2"
portable-pty = "0.5"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
rlua = "0.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1